[package]
name = "axu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
hyper = "0.14.27"
log = "0.4"
env_logger = "0.10.0"
tower = "0.4.13"