[package]
name = "axu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.34.0", features = ["full"] }
hyper = "0.14.27"
log = "0.4.20"
env_logger = "0.10.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["add-extension", "trace"] }
tracing = "0.1.37"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
time = "0.3.30"
uuid = { version = "1.5.0", features = ["serde"] }
todo_logic = { path = "src/todo_logic" }
utils = { path = "src/utils" }
