[package]
name = "todo_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version= "1.34.0", features = ["fs"], optional = true }
thiserror = "1"

[features]
default = ["persist"]
persist = ["dep:tokio"]
